# lollibs

./: CMakeLists.txt  README.md
examples/: packer.cpp
include/lollibs/: FileDataIndex.h  FileDataIndexItem.h  Package.h  PackageItemData.h  Translation.h
scripts/: generate-project-visual-studio.bat
src/: FileDataIndex.cpp  Package.cpp  PackageItemData.cpp  Translation.cpp
test/: TestFDTSaveLoad.h
test/fixture/: FILEDATA.FDT
